# mcp-context-forge

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-lite.yaml  .secrets.baseline  .snyk  .travis.yml  .yamllint  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  Containerfile.lite  Containerfile.scratch  DEVELOPING.md  MANIFEST.in  MULTIPLATFORM.md  Makefile  README.md  SECURITY.md  TESTING.md  UAID_APPROACH_B_IMPLEMENTATION.md  docker-compose-debug.yml  docker-compose-embedded.yml  docker-compose-performance.yml  docker-compose-verbose-logging.yml  docker-compose.override.lite.yml  docker-compose.sso.yml  docker-compose.with-langfuse.yml  docker-compose.with-phoenix.yml  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  fly.toml  license-policy.toml  package-lock.json  package.json  pyproject.toml  run_mutmut.py  (+4 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/tools/: fix_file_headers.py
.github/workflows/: alembic-upgrade-validation.yml  dependency-review.yml  docker-multiplatform.yml  docker-release.yml  docker-scan.yml  helm-publish.yml  license-check.yml  lint-web.yml  lint.yml  linting-full.yml  playwright.yml  pre-commit.yml  pytest-rust.yml  pytest.yml  python-package.yml  rust-tools.yml  rust.yml  sql-sanitizer.yml  vitest.yml  wrapper.yml
ansible/: README.md
ansible/ocp/: README.md
charts/mcp-stack/: Chart.yaml  README.md  values-minikube.yaml  values.schema.json  values.yaml
crates/a2a_runtime/: Cargo.toml
crates/a2a_runtime/benches/: invoke.rs
crates/a2a_runtime/src/: auth.rs  cache.rs  circuit.rs  config.rs  errors.rs  event_store.rs  eviction.rs  http.rs  invoke.rs  lib.rs  main.rs  metrics.rs  push.rs  queue.rs  server.rs  session.rs  stream.rs  trust.rs  uaid.rs
crates/a2a_runtime/tests/: binary.rs  integration.rs  python_parity_inventory.md  test_helpers.rs
crates/mcp_runtime/: Cargo.toml  DEVELOPING.md  FOLLOWUPS.md  README.md  RELEASE-CHECKLIST.md  STATUS.md  TESTING-DESIGN.md
crates/mcp_runtime/src/: backend_url_validator.rs  config.rs  lib.rs  observability.rs
crates/mcp_runtime/tests/: cli.rs  runtime.rs
crates/request_logging_masking_native_extension/: Cargo.toml  pyproject.toml
crates/request_logging_masking_native_extension/src/: lib.rs
crates/wrapper/: Cargo.toml  README.md
crates/wrapper/scripts/: test-fast-time-wrapper.sh
crates/wrapper/src/: config.rs  json_rpc_id_fast.rs  logger.rs  main_init.rs  main_loop.rs  stdio_reader.rs  streamer.rs  streamer_auth.rs  streamer_new.rs
crates/wrapper/tests/: test_config.rs  test_logger.rs  test_logger_file.rs  test_streamer_cert.rs  test_streamer_post.rs
docs/: Makefile  base.yml  mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/security/: JWT_TOKEN_SECURITY_IMPLEMENTATION.md
infra/keycloak/: realm-export.json
infra/nginx/: nginx-performance.conf  nginx-tls.conf  nginx.conf
infra/s390x/: Containerfile
llms/: mcp-server-python.md  plugins-llms.md
mcp-servers/python/compliance_reference_server/: Containerfile  Makefile  README.md  pyproject.toml
mcp-servers/python/compliance_reference_server/src/compliance_reference_server/: __init__.py  server.py
mcp-servers/python/compliance_reference_server/tests/: test_server.py
mcp-servers/python/data_analysis_server/: Containerfile  pyproject.toml
mcp-servers/python/mcp-rss-search/: Containerfile  Makefile  README.md  pyproject.toml  test_live.sh
mcp-servers/python/mcp_eval_server/: Containerfile  pyproject.toml
mcp-servers/python/mcp_eval_server/mcp_eval_server/storage/: results_store.py
mcpgateway/: __init__.py  admin.py  auth.py  auth_context.py  baggage.py  bootstrap_db.py  cli.py  cli_export_import.py  config.py  db.py  llm_provider_configs.py  llm_schemas.py  main.py  observability.py  reverse_proxy.py  runtime_state.py  schemas.py  sri_hashes.json  translate.py  translate_grpc.py  translate_header_utils.py  version.py  wrapper.py
mcpgateway/admin_ui/: a2aAgents.js  admin.js  caCertificate.js  constants.js  events.js  gateways.js  initialization.js  plugins.js  prompts.js  resources.js  search.js  security.js  servers.js  tools.js
mcpgateway/alembic/: env.py
mcpgateway/cache/: __init__.py  a2a_stats_cache.py  admin_stats_cache.py  auth_cache.py  global_config_cache.py  metrics_cache.py  registry_cache.py  resource_cache.py  session_registry.py  tool_lookup_cache.py
mcpgateway/common/: __init__.py  models.py  oauth.py  validators.py
mcpgateway/handlers/: __init__.py  sampling.py  signal_handlers.py
mcpgateway/instrumentation/: __init__.py  sqlalchemy.py
mcpgateway/middleware/: __init__.py  auth_middleware.py  baggage_middleware.py  compression.py  correlation_id.py  db_query_logging.py  http_auth_middleware.py  observability_middleware.py  path_filter.py  protocol_version.py  rbac.py  request_context.py  request_logging_middleware.py  security_headers.py  token_scoping.py  token_usage_middleware.py  validation_middleware.py
mcpgateway/plugins/: __init__.py  _redis.py  _state.py  gateway_plugin_manager.py  policy.py  utils.py  violation_codes.py
mcpgateway/routers/: auth.py  cancellation_router.py  email_auth.py  llm_admin_router.py  llm_config_router.py  llm_proxy_router.py  llmchat_router.py  log_search.py  metrics_maintenance.py  oauth_router.py  observability.py  rbac.py  reverse_proxy.py  runtime_admin_router.py  server_well_known.py  sso.py  teams.py  (+4 more)
plugins/: AGENTS.md  README.md  config-pii-guardian-policy.yaml  config.yaml  plugin_parity_config.yaml  requirements.txt  test_prompt_output_sentinel.py  test_tool_output_sentinel.py
scripts/: cdn_resources.py  compliance_matrix.py  download-cdn-assets.sh  license_checker.py  test_sqlite.py
supply-chain/: audits.toml  config.toml
tests/: AGENTS.md  __init__.py  conftest.py  test_readme.py
tools_rust/request_logging_masking_native_extension/: Cargo.toml  pyproject.toml
tools_rust/request_logging_masking_native_extension/python/request_logging_masking_native_extension/: __init__.py  __init__.pyi
tools_rust/request_logging_masking_native_extension/src/: lib.rs
(+1414 files in other folders)
