[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "request-logging-masking-native-extension"
dynamic = ["version"]
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.maturin]
module-name = "request_logging_masking_native_extension"
bindings = "pyo3"
python-source = "python"
features = ["pyo3/extension-module"]
