[package]
name = "mcp_stdio_wrapper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "mcp_stdio_wrapper"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
dotenvy = "0.15.7"
flume = "0.12.0"
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
reqwest.workspace = true
futures.workspace = true
http = "1.4.0"
serde_json.workspace = true
jsonrpc-core = "18.0.0"
actson = "2.1.0"
tracing-appender = "0.2.4"
toml = "0.9.11"
libc = "0.2"
bytes.workspace = true
nom = "7"
tempfile = "3.24.0"
base64.workspace = true
arc-swap = "1.8.1"
mimalloc = "0.1.48"
time = "0.3.47"
rmcp = { workspace = true, features = ["client", "transport-child-process"], optional = true }

[features]
integration-test = ["rmcp"]

[[bin]]
name = "wrapper_integration"
path = "src/bin/wrapper_integration.rs"
required-features = ["integration-test"]

[dev-dependencies]
mockito = "1.7.1"
tokio-test = "0.4.5"
tracing-test = "0.2.5"

[lints]
workspace = true
