[package]
name = "request_logging_masking_native_extension"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "request_logging_masking_native_extension"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
pyo3 = { version = "0.27.1", features = ["abi3-py311"] }
pyo3-stub-gen = "0.19"
serde_json = { version = "1", features = ["preserve_order"] }
