[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "request-logging-masking-native-extension"
version = "0.1.0"
requires-python = ">=3.11"

[tool.maturin]
module-name = "request_logging_masking_native_extension"
bindings = "pyo3"
python-source = "python"
features = ["pyo3/extension-module"]
