[project]
name = "compliance-reference-server"
version = "0.2.0"
description = "Reference MCP-compliant server (FastMCP) used as ground truth for ContextForge protocol compliance tests."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_reference_server"]

[project.scripts]
compliance-reference-server = "compliance_reference_server.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
