[project]
name = "data-analysis-server"
version = "0.1.0"
description = "MCP server for comprehensive data analysis capabilities"
authors = [
    {name = "ContextForge", email = "noreply@example.com"}
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "mcp>=1.27.0",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "orjson>=3.11.8",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_analysis_server"]

[project.scripts]
data-analysis-server = "data_analysis_server.server:main"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "B", "I", "N", "UP", "S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=data_analysis_server --cov-report=term-missing"
